--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Incar</string>
+    <string name="notificationChannel">Notification</string>
+    <string name="channelDescription">test description notification</string>
+    <string name="CHANNEL_ID">123123</string>
 </resources>
